# django_addons

./: .bandit  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run  runner  setup.cfg  setup.py
django_addons/django_helper/: apps.py
django_addons/django_helper/admin/: base.py  base_user.py
django_addons/django_helper/admin/mixins/: change_readonly_fields.py
django_addons/django_helper/drf/exceptions/: handler.py
django_addons/django_helper/drf/mixins/: current_user.py  ok_model.py  (+3 more)
django_addons/django_helper/models/: base.py  base_user.py  id_only.py
django_addons/django_helper/swagger/: urls.py
django_addons/django_helper/utils/: module_tool.py  singleton_meta.py
django_addons/notification_helper/: apps.py
django_addons/notification_helper/admin/: __init__.py  email_log.py  email_recipient_log.py
django_addons/notification_helper/migrations/: 0001_initial.py  0002_alter_emailrecipientlog_options.py
django_addons/notification_helper/models/: __init__.py  email_log.py  email_recipient_log.py
django_addons/user_management/: apps.py  urls.py
django_addons/user_management/admin/: __init__.py  verification_code.py
django_addons/user_management/auth_backends/: username_or_email.py
django_addons/user_management/migrations/: 0001_initial.py
django_addons/user_management/models/: __init__.py  verification_code.py
django_addons/user_management/options/: opts.py
django_addons/user_management/utils/: user_app_label.py
requirements/compiled/: dev.txt
requirements/prerequisite/: pip-tools.txt
requirements/raw/: base.in  dev.in
(+62 files in other folders)
