[metadata]
name = django_addons
version = 1.0.0
author = Ehsan Ahmadi
author_email = 1374ea@gmail.com
description = Some common django utils and addons
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.5,<4.0
packages = find:
include_package_data = true
install_requires =
    ; django_helper, notification_helper; user_management
    Django>=4.1.4,<5.0.0

    ; django_helper, user_management
    djangorestframework>=3.14.0,<4.0.0

    ; django_helper
    drf-spectacular>=0.25.1,<1.0.0

    ; user_management
    djangorestframework-simplejwt>=5.2.2,<6.0.0
